dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
spec:
  selector:
    app: playground
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
